tests/types/errors/missing_param_type.mochi
let f = fun(x) => x + 1
